--- a/cn/localisation/dip_messages_l_english.yml
+++ b/cn/localisation/dip_messages_l_english.yml
@@ -456,9 +456,9 @@
  HW_VASSAL_GREETING_01:0 "你现在可以使用[Root.GetName]之剑，[From.GetRulerTitle][From.GetRulerName]。"
  HW_VASSAL_GREETING_DISLOYAL_01:0 "你这声名狼藉的恶徒，我们 [Root.GetAdj] 人侍奉你为主公是历史的耻辱！！"
  RC_VASSAL_GREETING_01:0 "[Root.GetName]总是努力为我们的控股公司提供最好的服务。"
- RC_VASSAL_GREETING_DISLOYAL_01:0 "Our patience with your mismanagement is wearing thin. Do you intend to run the [Root.GetName] into the ground?"
+ RC_VASSAL_GREETING_DISLOYAL_01:0 "你的错误管理让我们越来越没有耐心了。 你是想把[Root.GetName]从太空带回地面吗？"
  PT_VASSAL_GREETING_01:0 "我们在哪都会寻找到价值。我们不会让你失望的。"
- PT_VASSAL_GREETING_DISLOYAL_01:0 "Why do we make such efforts to bring the treasures of the galaxy to wasteful [From.GetSpeciesNamePlural]?"
+ PT_VASSAL_GREETING_DISLOYAL_01:0 "我们何必费这么大力气把宇宙宝贵的资源带给浪费成性的[From.GetSpeciesNamePlural]呢？"
  HI_VASSAL_GREETING_01:0 "我们要怎样协助[From.GetRulerName]的统治？"
  HI_VASSAL_GREETING_DISLOYAL_01:0 "We will return to our rightful position as a player on the galactic stage and you will regret the humiliation you've put us through."
  FB_VASSAL_GREETING_01:0 "尽管我们的合作不太理想，我们还是竭尽全力促进双方互相理解。"
